--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <main>
         <div class="haut">
             <div class="espaceHeader"></div>
-            <menu>
+            <div class="menu">
                 <div class="image1">
                     <img src="data/planete.png" alt="logoCafe">
                 </div>
                 <div class="texte1">
                 <h1>CaféPierre Project</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aliquid debitis, beatae deleniti unde placeat? Quidem, possimus enim. Aliquam, suscipit? Ab nostrum officia nesciunt eligendi sequi, magnam sapiente qui velit.</p>
+                <p>Le projet CaféPierre est un projet éco-responsable qui vise à étudier les facteurs environnementaux, pour revisiter les modes de culture et de production de cette entreprise de fabriquante de café.<br>Du champ à la tasse, l'objectif est de concevoir un produit sain et éthique pour les consommateurs.</p>
                 <a href="#graphes" class="boutonGraphe">Voir nos graphes</a>
                 </div>
-            </menu>
+            </div>
         </div>
         <div class="separation"></div>
         <div class="bas" id="graphes">
