--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="utf-8" lang="fr">
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="accueil.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="base.css">
     <title>CaféPierre</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
-    <header>
+    <header id="header">
       <div class="containerLogoNom">
             <div class="logo">
                 <img src="data/logoCafe.svg" alt="logo">
@@ -78,7 +81,7 @@
     <footer>
         <div class="info">
             <p>© 2022 | Genetet, Kerchaoui, Lamat, Lebez, Panteix</p>
-            <div class="liens">
+            <div>
                 <a href="#">Accueil</a>
                 <a href="#graphes">Nos Graphes</a>
             </div>
