--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     Nos graphes sur le PIB
                 </a>
 
-                <a href="#" class="miniatureGraphe">
+                <a href="CO2.html" class="miniatureGraphe">
                     <img src="data/emissionGas.png" alt="emission">
                     Nos graphes sur les émissions
                 </a>
