--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <link rel="shortcut icon" href="data/logoCafe.png">
     <meta charset="utf-8" lang="fr">
     <meta name="viewport" content="width=device-width"/>
-    <link rel="stylesheet" href="accueil.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/base.css">
     <title>CaféPierre</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
@@ -42,7 +42,7 @@
         <div class="bas" id="graphes">
             <div class="centre">
 
-                <a href="#" class="miniatureGraphe">
+                <a href="CO2.html" class="miniatureGraphe">
                     <img src="data/co2.png" alt="CO2">
                     Nos graphes sur le CO2
                 </a>
@@ -62,7 +62,7 @@
                     Nos graphes sur l'énergie
                 </a>
 
-                <a href="#" class="miniatureGraphe">
+                <a href="PIB.html" class="miniatureGraphe">
                     <img src="data/argent.png" alt="argent">
                     Nos graphes sur le PIB
                 </a>
@@ -87,6 +87,6 @@
             </div>
         </div>
     </footer>
-    <script src="accueil.js"></script>
+    <script src="js/accueil.js"></script>
 </body>
 </html>
