site web mise avec graphes

--- a/CO2.html
+++ b/CO2.html
@@ -23,7 +23,14 @@
         </div>
         <nav id="nav">
             <a href="index.html">Accueil</a>
-            <a href="#graphes">Graphes</a>
+            <a href="CO2.html">CO2</a>
+            <a href="temperature.html">Température</a>
+            <a href="Ocean.html">Niveau de l'océan</a>
+            <a href="energie.html">Energie</a>
+            <a href="PIB.html">PIB</a>
+            <a href="empreinte.html">Empreinte</a>
+            <a href="population.html">Population</a>
+            <a href="industries.html">Secteurs</a>
         </nav>
     </header>
     <div class="separation"></div>
@@ -37,7 +44,7 @@
 
                     <select name="pays" id="pays-select">
                         <option value="CHN">Chine</option>
-                        <option value="CIV">CIV</option>
+                        <option value="CIV">Côte d'Ivoire</option>
                         <option value="DEU">Allemagne</option>
                         <option value="DNK">DNK</option>
                         <option value="FRA">France</option>
@@ -58,7 +65,15 @@
             <p>© 2022 | Genetet, Kerchaoui, Lamat, Lebez, Panteix</p>
             <div>
                 <a href="index.html">Accueil</a>
-                <a href="#">Nos Graphes</a>
+                <a href="index.html">Accueil</a>
+                <a href="CO2.html">CO2</a>
+                <a href="temperature.html">Température</a>
+                <a href="Ocean.html">Niveau de l'océan</a>
+                <a href="energie.html">Energie</a>
+                <a href="PIB.html">PIB</a>
+                <a href="empreinte.html">Empreinte</a>
+                <a href="population.html">Population</a>
+                <a href="industries.html">Secteurs</a>
             </div>
         </div>
     </footer>
