--- a/PIB.html
+++ b/PIB.html
@@ -23,7 +23,14 @@
         </div>
         <nav id="nav">
             <a href="index.html">Accueil</a>
-            <a href="#">Graphes</a>
+            <a href="CO2.html">CO2</a>
+            <a href="temperature.html">Température</a>
+            <a href="Ocean.html">Niveau de l'océan</a>
+            <a href="energie.html">Energie</a>
+            <a href="PIB.html">PIB</a>
+            <a href="empreinte.html">Empreinte</a>
+            <a href="population.html">Population</a>
+            <a href="industries.html">Secteurs</a>
         </nav>
     </header>
     <div class="separation"></div>
@@ -50,23 +57,6 @@
                 <p>Le produit intérieur brut (PIB) est l'indicateur économique qui permet de quantifier la valeur totale de la « production de richesse » annuelle effectuée par les agents économiques (ménages, entreprises, administrations publiques) résidant à l'intérieur d'un territoire.</p>
             </div>
 
-            <div class="graphe">
-                <h1>Evolution Secteurs</h1>
-                <div>
-                    <label for="secteur-select">Pays:</label>
-
-                    <select id="secteur-select">
-                        <option value="Agriculture">Agriculture</option>
-                        <option value="CommercialAndPublicServices">Commerce and services public</option>
-                        <option value="Industry">Industriel</option>
-                        <option value="Other">Other</option>
-                        <option value="Residential">Residentiel</option>
-                        <option value="Transport">Transport</option>
-                    </select>
-                    <img id="img-2" src="plot/Evolution_Agriculture.png" alt="secteur">
-                </div>
-                <p>Un secteur économique, secteur d'activité ou secteur d'activité économique est un ensemble d’activité économique, ayant des traits similaires.</p>
-            </div>
 
 
         </div>
@@ -77,7 +67,15 @@
             <p>© 2022 | Genetet, Kerchaoui, Lamat, Lebez, Panteix</p>
             <div>
                 <a href="index.html">Accueil</a>
-                <a href="#">Nos Graphes</a>
+                <a href="index.html">Accueil</a>
+                <a href="CO2.html">CO2</a>
+                <a href="temperature.html">Température</a>
+                <a href="Ocean.html">Niveau de l'océan</a>
+                <a href="energie.html">Energie</a>
+                <a href="PIB.html">PIB</a>
+                <a href="empreinte.html">Empreinte</a>
+                <a href="population.html">Population</a>
+                <a href="industries.html">Secteurs</a>
             </div>
         </div>
     </footer>
