--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                     Nos graphes sur le CO2
                 </a>
 
-                <a href="#" class="miniatureGraphe">
+                <a href="temperature.html" class="miniatureGraphe">
                     <img src="data/temperature.png" alt="temperature">
                     Nos graphes sur la température
                 </a>
 
-                <a href="#" class="miniatureGraphe">
+                <a href="Ocean.html" class="miniatureGraphe">
                     <img src="data/ocean.png" alt="ocean">
                     Nos graphes sur le niveau de l'océan
                 </a>
 
-                <a href="#" class="miniatureGraphe">
+                <a href="energie.html" class="miniatureGraphe">
                     <img src="data/energie.png" alt="energie">
                     Nos graphes sur l'énergie
                 </a>
@@ -67,9 +67,19 @@
                     Nos graphes sur le PIB
                 </a>
 
-                <a href="CO2.html" class="miniatureGraphe">
+                <a href="empreinte.html" class="miniatureGraphe">
                     <img src="data/emissionGas.png" alt="emission">
                     Nos graphes sur les émissions
+                </a>
+
+                <a href="population.html" class="miniatureGraphe">
+                    <img src="data/population.png" alt="population">
+                    Nos graphes sur la population
+                </a>
+
+                <a href="industries.html" class="miniatureGraphe">
+                    <img src="data/secteurs.png" alt="secteur">
+                    Nos graphes sur les secteurs
                 </a>
 
                 
@@ -84,6 +94,14 @@
             <div>
                 <a href="#">Accueil</a>
                 <a href="#graphes">Nos Graphes</a>
+                <a href="CO2.html">CO2</a>
+                <a href="temperature.html">Température</a>
+                <a href="Ocean.html">Niveau de l'océan</a>
+                <a href="energie.html">Energie</a>
+                <a href="PIB.html">PIB</a>
+                <a href="empreinte.html">Empreinte</a>
+                <a href="population.html">Population</a>
+                <a href="industries.html">Secteurs</a>
             </div>
         </div>
     </footer>
