--- a/industries.html
+++ b/industries.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pageGraphe.css">
     <link rel="stylesheet" href="css/graphe.css">
 
-    <title>CaféPierre : Graphes Ocean</title>
+    <title>CaféPierre : Graphes CO2</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
@@ -38,13 +38,40 @@
         <div class="espaceHeader"></div>
         <div class="page">
             <div class="graphe">
-                <h1>Niveau des Océans</h1>
+                <h1>Evolution des secteurs</h1>
                 <div>
-                    
-                    <img id="img-1" src="plot/SeaLevel.png" alt="SeaLevel">
+                    <label for="secteur-select">Secteur:</label>
+
+                    <select id="secteur-select">
+                        <option value="Agriculture">Agriculture</option>
+                        <option value="CommercialAndPublicServices">Commerce and services public</option>
+                        <option value="Industry">Industriel</option>
+                        <option value="Other">Other</option>
+                        <option value="Residential">Residentiel</option>
+                        <option value="Transport">Transport</option>
+                    </select>
+                    <img id="img-1" src="plot/Evolution_Agriculture.png" alt="secteur">
                 </div>
-                <p>L'élévation du niveau de la mer est un phénomène enclenché au cours du XXᵉ siècle et résultant du réchauffement climatique. Le niveau moyen des océans a augmenté de 20 cm entre 1901 et 2018, et le rythme s'accélère, s'établissant, vers 2020, à plus de 3,5 mm par an</p>
+                <p>Un secteur économique, secteur d'activité ou secteur d'activité économique est un ensemble d’activité économique, ayant des traits similaires.</p>
             </div>
+
+            <div class="graphe">
+                <h1>Evolution du pourcentage de des secteurs dans le monde</h1>
+                <div>
+                    <label for="secteur2-select">Secteur:</label>
+
+                    <select id="secteur2-select">
+                        <option value="Agriculture">Agriculture</option>
+                        <option value="CommercialAndPublicServices">Commerce and services public</option>
+                        <option value="Industry">Industriel</option>
+                        <option value="Other">Other</option>
+                        <option value="Residential">Residentiel</option>
+                        <option value="Transport">Transport</option>
+                    </select>
+                    <img id="img-2" src="plot/PourcentageAgriculture.png" alt="secteur">
+                </div>
+            </div>
+
 
         </div>
         <div class="separation2"></div>
@@ -66,5 +93,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/grapheIndustries.js"></script>
 </body>
 </html>
