--- a/population.html
+++ b/population.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pageGraphe.css">
     <link rel="stylesheet" href="css/graphe.css">
 
-    <title>CaféPierre : Graphes Ocean</title>
+    <title>CaféPierre : Graphes population</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
@@ -38,13 +38,24 @@
         <div class="espaceHeader"></div>
         <div class="page">
             <div class="graphe">
-                <h1>Niveau des Océans</h1>
+                <h1>Evolution de la population</h1>
                 <div>
-                    
-                    <img id="img-1" src="plot/SeaLevel.png" alt="SeaLevel">
+                    <label for="pays-select">Pays:</label>
+
+                    <select name="pays" id="pays-select">
+                        <option value="CHN">Chine</option>
+                        <option value="CIV">CIV</option>
+                        <option value="DEU">Allemagne</option>
+                        <option value="DNK">DNK</option>
+                        <option value="FRA">France</option>
+                        <option value="IND">Inde</option>
+                        <option value="USA">USA</option>
+                    </select>
+                    <img id="img-1" src="plot/Population'CHN'.png" alt="CarbonFootprint">
                 </div>
-                <p>L'élévation du niveau de la mer est un phénomène enclenché au cours du XXᵉ siècle et résultant du réchauffement climatique. Le niveau moyen des océans a augmenté de 20 cm entre 1901 et 2018, et le rythme s'accélère, s'établissant, vers 2020, à plus de 3,5 mm par an</p>
+                <p>Une population est un ensemble d'individus ou d'éléments partageant une ou plusieurs caractéristiques qui servent à les regrouper.</p>
             </div>
+
 
         </div>
         <div class="separation2"></div>
@@ -66,5 +77,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/graphePopulation.js"></script>
 </body>
 </html>
