--- a/temperature.html
+++ b/temperature.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pageGraphe.css">
     <link rel="stylesheet" href="css/graphe.css">
 
-    <title>CaféPierre : Graphes </title>
+    <title>CaféPierre : Graphes Temperature</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
@@ -23,7 +23,14 @@
         </div>
         <nav id="nav">
             <a href="index.html">Accueil</a>
-            <a href="#">Graphes</a>
+            <a href="CO2.html">CO2</a>
+            <a href="temperature.html">Température</a>
+            <a href="Ocean.html">Niveau de l'océan</a>
+            <a href="energie.html">Energie</a>
+            <a href="PIB.html">PIB</a>
+            <a href="empreinte.html">Empreinte</a>
+            <a href="population.html">Population</a>
+            <a href="industries.html">Secteurs</a>
         </nav>
     </header>
     <div class="separation"></div>
@@ -31,41 +38,20 @@
         <div class="espaceHeader"></div>
         <div class="page">
             <div class="graphe">
-                <h1>Evolution PIB selon le temps</h1>
+                <h1>Température Moyennes Mondiale</h1>
                 <div>
-                    <label for="pays-select">Pays:</label>
-
-                    <select name="pays" id="pays-select">
-                        <option value="CHN">Chine</option>
-                        <option value="CIV">CIV</option>
-                        <option value="DEU">Allemagne</option>
-                        <option value="DNK">DNK</option>
-                        <option value="FRA">France</option>
-                        <option value="IND">Inde</option>
-                        <option value="USA">USA</option>
-                        <option value="WLD">WLD</option>
-                    </select>
-                    <img id="img-1" src="plot/GDP_H_'CHN'.png" alt="PIB">
+                    
+                    <img id="img-1" src="plot/Temperature.png" alt="Temperature">
                 </div>
-                <p>Le produit intérieur brut (PIB) est l'indicateur économique qui permet de quantifier la valeur totale de la « production de richesse » annuelle effectuée par les agents économiques (ménages, entreprises, administrations publiques) résidant à l'intérieur d'un territoire.</p>
+                <p>La température est une grandeur physique mesurée à l’aide d’un thermomètre et étudiée en thermométrie. Dans la vie courante, elle est reliée aux sensations de froid et de chaud, provenant du transfert thermique entre le corps humain et son environnement.</p>
             </div>
 
             <div class="graphe">
-                <h1>Evolution Secteurs</h1>
+                <h1>Changement de Temperature</h1>
                 <div>
-                    <label for="secteur-select">Pays:</label>
-
-                    <select id="secteur-select">
-                        <option value="Agriculture">Agriculture</option>
-                        <option value="CommercialAndPublicServices">Commerce and services public</option>
-                        <option value="Industry">Industriel</option>
-                        <option value="Other">Other</option>
-                        <option value="Residential">Residentiel</option>
-                        <option value="Transport">Transport</option>
-                    </select>
-                    <img id="img-2" src="plot/Evolution_Agriculture.png" alt="secteur">
+                
+                    <img id="img-2" src="plot/TemperatureChange.png" alt="Temperature">
                 </div>
-                <p>Un secteur économique, secteur d'activité ou secteur d'activité économique est un ensemble d’activité économique, ayant des traits similaires.</p>
             </div>
 
 
@@ -77,10 +63,17 @@
             <p>© 2022 | Genetet, Kerchaoui, Lamat, Lebez, Panteix</p>
             <div>
                 <a href="index.html">Accueil</a>
-                <a href="#">Nos Graphes</a>
+                <a href="index.html">Accueil</a>
+                <a href="CO2.html">CO2</a>
+                <a href="temperature.html">Température</a>
+                <a href="Ocean.html">Niveau de l'océan</a>
+                <a href="energie.html">Energie</a>
+                <a href="PIB.html">PIB</a>
+                <a href="empreinte.html">Empreinte</a>
+                <a href="population.html">Population</a>
+                <a href="industries.html">Secteurs</a>
             </div>
         </div>
     </footer>
-    <script src="js/graphePIB.js"></script>
 </body>
 </html>
