--- a/industries.html
+++ b/industries.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pageGraphe.css">
     <link rel="stylesheet" href="css/graphe.css">
 
-    <title>CaféPierre : Graphes CO2</title>
+    <title>CaféPierre : Graphes Secteurs</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
