--- a/population.html
+++ b/population.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pageGraphe.css">
     <link rel="stylesheet" href="css/graphe.css">
 
-    <title>CaféPierre : Graphes population</title>
+    <title>CaféPierre : Graphes Population</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
