--- a/PIB.html
+++ b/PIB.html
@@ -35,7 +35,6 @@
     </header>
     <div class="separation"></div>
     <main>
-        <div class="espaceHeader"></div>
         <div class="page">
             <div class="graphe">
                 <h1>Evolution PIB selon le temps</h1>
@@ -44,13 +43,13 @@
 
                     <select name="pays" id="pays-select">
                         <option value="CHN">Chine</option>
-                        <option value="CIV">CIV</option>
+                        <option value="CIV">Côte d'Ivoire</option>
                         <option value="DEU">Allemagne</option>
-                        <option value="DNK">DNK</option>
+                        <option value="DNK">DanemarkK</option>
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
-                        <option value="WLD">WLD</option>
+                        <option value="WLD">Monde</option>
                     </select>
                     <img id="img-1" src="plot/GDP_H_'CHN'.png" alt="PIB">
                 </div>
