--- a/CO2.html
+++ b/CO2.html
@@ -35,7 +35,6 @@
     </header>
     <div class="separation"></div>
     <main>
-        <div class="espaceHeader"></div>
         <div class="page">
             <div class="graphe">
                 <h1>Empreinte carbonne selon le temps</h1>
@@ -46,7 +45,7 @@
                         <option value="CHN">Chine</option>
                         <option value="CIV">Côte d'Ivoire</option>
                         <option value="DEU">Allemagne</option>
-                        <option value="DNK">DNK</option>
+                        <option value="DNK">DanemarkK</option>
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
