--- a/empreinte.html
+++ b/empreinte.html
@@ -35,7 +35,6 @@
     </header>
     <div class="separation"></div>
     <main>
-        <div class="espaceHeader"></div>
         <div class="page">
             <div class="graphe">
                 <h1>Empreinte gas à effet de serre selon le temps</h1>
@@ -44,9 +43,9 @@
 
                     <select name="pays" id="pays-select">
                         <option value="CHN">Chine</option>
-                        <option value="CIV">CIV</option>
+                        <option value="CIV">Côte d'Ivoire</option>
                         <option value="DEU">Allemagne</option>
-                        <option value="DNK">DNK</option>
+                        <option value="DNK">DanemarkK</option>
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
