--- a/energie.html
+++ b/energie.html
@@ -35,7 +35,6 @@
     </header>
     <div class="separation"></div>
     <main>
-        <div class="espaceHeader"></div>
         <div class="page">
             <div class="graphe">
                 <h1>Evolution de la consommation d'énergies première</h1>
@@ -44,13 +43,13 @@
 
                     <select name="pays" id="pays-select">
                         <option value="CHN">Chine</option>
-                        <option value="CIV">CIV</option>
+                        <option value="CIV">Côte d'Ivoire</option>
                         <option value="DEU">Allemagne</option>
-                        <option value="DNK">DNK</option>
+                        <option value="DNK">DanemarkK</option>
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
-                        <option value="WLD">WLD</option>
+                        <option value="WLD">Monde</option>
                     </select>
                     <img id="img-1" src="plot/primaryEnergyConsumption'CHN'.png" alt="consoEnergie">
                 </div>
@@ -64,13 +63,13 @@
 
                     <select id="pays2-select">
                         <option value="CHN">Chine</option>
-                        <option value="CIV">CIV</option>
+                        <option value="CIV">Côte d'Ivoire</option>
                         <option value="DEU">Allemagne</option>
-                        <option value="DNK">DNK</option>
+                        <option value="DNK">DanemarkK</option>
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
-                        <option value="WLD">WLD</option>
+                        <option value="WLD">Monde</option>
                     </select>
                     <img id="img-2" src="plot/primaryEnergyProduction'CHN'.png" alt="prodEnergie">
                 </div>
