--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="data/logoCafe.png">
+    <link rel="shortcut icon" href="image/logoCafe.png">
     <meta charset="utf-8" lang="fr">
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="css/accueil.css">
@@ -15,7 +15,7 @@
     <header id="header">
       <div class="containerLogoNom">
             <div class="logo">
-                <img src="data/logoCafe.svg" alt="logo">
+                <img src="image/logoCafe.svg" alt="logo">
             </div>
             <h1>CaféPierre</h1>
         </div>
@@ -29,7 +29,7 @@
             <div class="espaceHeader"></div>
             <div class="menu">
                 <div class="image1">
-                    <img src="data/planete.png" alt="logoCafe">
+                    <img src="image/planete.png" alt="logoCafe">
                 </div>
                 <div class="texte1">
                 <h1>CaféPierre Project</h1>
@@ -43,42 +43,42 @@
             <div class="centre">
 
                 <a href="CO2.html" class="miniatureGraphe">
-                    <img src="data/co2.png" alt="CO2">
+                    <img src="image/co2.png" alt="CO2">
                     Nos graphes sur le CO2
                 </a>
 
                 <a href="temperature.html" class="miniatureGraphe">
-                    <img src="data/temperature.png" alt="temperature">
+                    <img src="image/temperature.png" alt="temperature">
                     Nos graphes sur la température
                 </a>
 
                 <a href="Ocean.html" class="miniatureGraphe">
-                    <img src="data/ocean.png" alt="ocean">
+                    <img src="image/ocean.png" alt="ocean">
                     Nos graphes sur le niveau de l'océan
                 </a>
 
                 <a href="energie.html" class="miniatureGraphe">
-                    <img src="data/energie.png" alt="energie">
+                    <img src="image/energie.png" alt="energie">
                     Nos graphes sur l'énergie
                 </a>
 
                 <a href="PIB.html" class="miniatureGraphe">
-                    <img src="data/argent.png" alt="argent">
+                    <img src="image/argent.png" alt="argent">
                     Nos graphes sur le PIB
                 </a>
 
                 <a href="empreinte.html" class="miniatureGraphe">
-                    <img src="data/emissionGas.png" alt="emission">
+                    <img src="image/emissionGas.png" alt="emission">
                     Nos graphes sur les émissions
                 </a>
 
                 <a href="population.html" class="miniatureGraphe">
-                    <img src="data/population.png" alt="population">
+                    <img src="image/population.png" alt="population">
                     Nos graphes sur la population
                 </a>
 
                 <a href="industries.html" class="miniatureGraphe">
-                    <img src="data/secteurs.png" alt="secteur">
+                    <img src="image/secteurs.png" alt="secteur">
                     Nos graphes sur les secteurs
                 </a>
 
