--- a/PIB.html
+++ b/PIB.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="data/logoCafe.png">
+    <link rel="shortcut icon" href="image/logoCafe.png">
     <meta charset="utf-8" lang="fr">
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="css/footer.css">
@@ -17,7 +17,7 @@
     <header id="header">
       <div class="containerLogoNom">
             <div class="logo">
-                <img src="data/logoCafe.svg" alt="logo">
+                <img src="image/logoCafe.svg" alt="logo">
             </div>
             <h1>CaféPierre</h1>
         </div>
@@ -45,7 +45,7 @@
                         <option value="CHN">Chine</option>
                         <option value="CIV">Côte d'Ivoire</option>
                         <option value="DEU">Allemagne</option>
-                        <option value="DNK">DanemarkK</option>
+                        <option value="DNK">Danemark</option>
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
