--- a/temperature.html
+++ b/temperature.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="data/logoCafe.png">
+    <link rel="shortcut icon" href="image/logoCafe.png">
     <meta charset="utf-8" lang="fr">
     <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="css/footer.css">
@@ -17,7 +17,7 @@
     <header id="header">
       <div class="containerLogoNom">
             <div class="logo">
-                <img src="data/logoCafe.svg" alt="logo">
+                <img src="image/logoCafe.svg" alt="logo">
             </div>
             <h1>CaféPierre</h1>
         </div>
