mise a jour site avec nouveaux graphes

--- a/empreinte.html
+++ b/empreinte.html
@@ -56,6 +56,25 @@
             </div>
 
             <div class="graphe">
+                <h1>Production de gas à effet de serre selon le temps</h1>
+                <div>
+                    <label for="pays-select">Pays:</label>
+
+                    <select name="pays" id="pays2-select">
+                        <option value="CHN">Chine</option>
+                        <option value="CIV">Côte d'Ivoire</option>
+                        <option value="DEU">Allemagne</option>
+                        <option value="DNK">Danemark</option>
+                        <option value="FRA">France</option>
+                        <option value="IND">Inde</option>
+                        <option value="USA">USA</option>
+                    </select>
+                    <img id="img-2" src="plot/ProductionOfGHGPourcentage'CHN'.png" alt="GHG">
+                </div>
+                <p>L’empreinte carbone est un indicateur qui mesure la quantité de gaz à effet de serre relâchée dans l'atmosphère par une activité. Elle permet ainsi d’évaluer l’impact des activités humaines sur l’environnement. Mesurer son impact environnemental est la première étape avant d'agir contre le réchauffement climatique.</p>
+            </div>
+
+            <div class="graphe">
                 <h1>Empreinte gas à effet de serre Mondiale</h1>
                 <img src="plot/GreenhouseGas.png" alt="GreenhouseGas">
             </div>
