--- a/energie.html
+++ b/energie.html
@@ -96,6 +96,25 @@
                 </div>
             </div>
 
+            <div class="graphe">
+                <h1>Evolution de la production d'énergies première</h1>
+                <div>
+                    <label for="pays4-select">Pays:</label>
+
+                    <select id="pays4-select">
+                        <option value="CHN">Chine</option>
+                        <option value="CIV">Côte d'Ivoire</option>
+                        <option value="DEU">Allemagne</option>
+                        <option value="DNK">Danemark</option>
+                        <option value="FRA">France</option>
+                        <option value="IND">Inde</option>
+                        <option value="USA">USA</option>
+                        <option value="WLD">Monde</option>
+                    </select>
+                    <img id="img-4" src="plot/ProductionVSConsumptionPrimaryEnergy.'CHN'.png" alt="prodEnergie">
+                </div>
+            </div>
+
 
         </div>
         <div class="separation2"></div>
