--- a/empreinte.html
+++ b/empreinte.html
@@ -49,6 +49,7 @@
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
+                        <option value="WLD">Monde</option>
                     </select>
                     <img id="img-1" src="plot/GHG'CHN'.png" alt="GHG">
                 </div>
@@ -68,6 +69,7 @@
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
+                        <option value="WLD">Monde</option>
                     </select>
                     <img id="img-2" src="plot/ProductionOfGHGPourcentage'CHN'.png" alt="GHG">
                 </div>
