--- a/population.html
+++ b/population.html
@@ -49,6 +49,7 @@
                         <option value="FRA">France</option>
                         <option value="IND">Inde</option>
                         <option value="USA">USA</option>
+                        <option value="WLD">Monde</option>
                     </select>
                     <img id="img-1" src="plot/Population'CHN'.png" alt="CarbonFootprint">
                 </div>
