--- a/CO2.html
+++ b/CO2.html
@@ -37,7 +37,7 @@
     <main>
         <div class="page">
             <div class="graphe">
-                <h1>Empreinte carbonne selon le temps</h1>
+                <h1>Empreinte carbonne selon le temps en tonnes de CO2</h1>
                 <div>
                     <label for="pays-select">Pays:</label>
 
