--- a/PIB.html
+++ b/PIB.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pageGraphe.css">
     <link rel="stylesheet" href="css/graphe.css">
 
-    <title>CaféPierre : Graphes PIB</title>
+    <title>CaféPierre : Graphes PIB ( PIB / Hab )</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
