--- a/empreinte.html
+++ b/empreinte.html
@@ -37,7 +37,7 @@
     <main>
         <div class="page">
             <div class="graphe">
-                <h1>Empreinte gas à effet de serre selon le temps</h1>
+                <h1>Empreinte gas à effet de serre selon le temps en Tonnes de CO2</h1>
                 <div>
                     <label for="pays-select">Pays:</label>
 
@@ -53,11 +53,11 @@
                     </select>
                     <img id="img-1" src="plot/GHG'CHN'.png" alt="GHG">
                 </div>
-                <p>L’empreinte carbone est un indicateur qui mesure la quantité de gaz à effet de serre relâchée dans l'atmosphère par une activité. Elle permet ainsi d’évaluer l’impact des activités humaines sur l’environnement. Mesurer son impact environnemental est la première étape avant d'agir contre le réchauffement climatique.</p>
+                <p>Les gaz à effet de serre sont des composants gazeux qui absorbent le rayonnement infrarouge émis par la surface terrestre et contribuent ainsi à l'effet de serre. L'augmentation de leur concentration dans l'atmosphère terrestre est l'un des facteurs à l'origine du réchauffement climatique.</p>
             </div>
 
             <div class="graphe">
-                <h1>Production de gas à effet de serre selon le temps</h1>
+                <h1>Production de gas à effet de serre selon le temps en Tonnes de CO2</h1>
                 <div>
                     <label for="pays-select">Pays:</label>
 
@@ -73,11 +73,10 @@
                     </select>
                     <img id="img-2" src="plot/ProductionOfGHGPourcentage'CHN'.png" alt="GHG">
                 </div>
-                <p>L’empreinte carbone est un indicateur qui mesure la quantité de gaz à effet de serre relâchée dans l'atmosphère par une activité. Elle permet ainsi d’évaluer l’impact des activités humaines sur l’environnement. Mesurer son impact environnemental est la première étape avant d'agir contre le réchauffement climatique.</p>
             </div>
 
             <div class="graphe">
-                <h1>Empreinte gas à effet de serre Mondiale</h1>
+                <h1>Empreinte gas à effet de serre Mondiale en Tonnes de CO2</h1>
                 <img src="plot/GreenhouseGas.png" alt="GreenhouseGas">
             </div>
 
