--- a/energie.html
+++ b/energie.html
@@ -37,7 +37,7 @@
     <main>
         <div class="page">
             <div class="graphe">
-                <h1>Evolution de la consommation d'énergies première</h1>
+                <h1>Evolution de la consommation d'énergies première en Millons de Tonnes d'énergies</h1>
                 <div>
                     <label for="pays-select">Pays:</label>
 
@@ -57,7 +57,7 @@
             </div>
 
             <div class="graphe">
-                <h1>Evolution de la production d'énergies première</h1>
+                <h1>Evolution de la production d'énergies première en Millons de Tonnes d'énergies</h1>
                 <div>
                     <label for="pays2-select">Pays:</label>
 
@@ -97,7 +97,7 @@
             </div>
 
             <div class="graphe">
-                <h1>Evolution de la production d'énergies première</h1>
+                <h1>Evolution de la production d'énergies première en Millions de Tonnes d'énergies</h1>
                 <div>
                     <label for="pays4-select">Pays:</label>
 
