--- a/industries.html
+++ b/industries.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="graphe">
-                <h1>Evolution du pourcentage de des secteurs dans le monde</h1>
+                <h1>Evolution du pourcentage de des secteurs dans le monde ( % de proportion / Monde )</h1>
                 <div>
                     <label for="secteur2-select">Secteur:</label>
 
