--- a/population.html
+++ b/population.html
@@ -37,7 +37,7 @@
     <main>
         <div class="page">
             <div class="graphe">
-                <h1>Evolution de la population</h1>
+                <h1>Evolution de la population ( en Milliards )</h1>
                 <div>
                     <label for="pays-select">Pays:</label>
 
