--- a/PIB.html
+++ b/PIB.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/pageGraphe.css">
     <link rel="stylesheet" href="css/graphe.css">
 
-    <title>CaféPierre : Graphes PIB ( PIB / Hab )</title>
+    <title>CaféPierre : Graphes PIB</title>
     <meta name="viewport" content="width=device-width"/>
 </head>
 <body>
@@ -37,7 +37,7 @@
     <main>
         <div class="page">
             <div class="graphe">
-                <h1>Evolution PIB selon le temps</h1>
+                <h1>Evolution PIB selon le temps  ( PIB / Hab )</h1>
                 <div>
                     <label for="pays-select">Pays:</label>
 
