--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <h1>CaféPierre Project</h1>
                 <p>Le projet CaféPierre est un projet éco-responsable qui vise à étudier les facteurs environnementaux, pour revisiter les modes de culture et de production de cette entreprise de fabriquante de café.<br>Du champ à la tasse, l'objectif est de concevoir un produit sain et éthique pour les consommateurs.</p>
                 <a href="#graphes" class="boutonGraphe">Voir nos graphes</a>
+                <a  class="boutonGraphe" href="https://forms.gle/FV2V3crNW7p2SSTN7">Laisser un avis</a>
                 </div>
             </div>
         </div>
